@@ -1,5 +1,5 @@
 /*
- * This CORBA IDL file has been generated by smidump 0.2.8. Do not edit.
+ * This CORBA IDL file has been generated by smidump 0.2.9. Do not edit.
  */
 
 #ifndef _IF_MIB_IDL_
